ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -16,11 +16,18 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!--description-->
 		<div>
+			<h1>Description</h1>
 			<p>Je suis un garçon timide qui ne connait pas draguer les filles et qui ne sait pas comment s'y prendre 
 				pour causer avec une c'est vraiment dommage parce que je les aime bien moi. Je suppose que je n'ai pas
 				beaucoup de chances avec elles.
 			</p>
+		</div>
+		<!--recompenses-->
+		<div>
+			<h1>Recompenses</h1>
+			<p>En construction ...</p>
 		</div>
 		
 	
