ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -29,6 +29,12 @@
 			<h1>Recompenses</h1>
 			<p>En construction ...</p>
 		</div>
+		<!--mon gist-->
+		<div>
+			<h1>mon gist</h1>
+			<p><script src="https://gist.github.com/DURELATTACK/9add7641a2ed04d3a7ca5145aadb86fe.js"></script></p>
+		</div>
+
 		
 	
 </body></html>
