--- a/hello.html
+++ b/hello.html
@@ -27,7 +27,7 @@
 		<!--recompenses-->
 		<div>
 			<h1>Recompenses</h1>
-			<p><img src="images\medal_bronze.png" alt="rien"></p>
+			<p><img src="images\medal_bronze.png" alt="rien"><img src="images\medal_silver.png" alt="rien"></p>
 		</div>
 		<!--mon gist-->
 		<div>
