--- a/hello.html
+++ b/hello.html
@@ -34,6 +34,11 @@
 			<h1>mon gist</h1>
 			<p><script src="https://gist.github.com/DURELATTACK/9add7641a2ed04d3a7ca5145aadb86fe.js"></script></p>
 		</div>
+		<!--commandes git-->
+		<div>
+			<h1>mes commandes</h1>
+			<p>git pull</p>
+		</div>
 
 		
 	
